--- a/business/templates/userData/BusinessCreditStepsStandalone.html
+++ b/business/templates/userData/BusinessCreditStepsStandalone.html
@@ -3,6 +3,7 @@
         <h2>Business Credit Building Steps You Need Done For You</h2>
     </div>
 </div>
+<div class="room">
 <section class="main-content">
     <div class="row">
         <div class="col-md-12">
@@ -35,47 +36,59 @@
                 </div>
                 <div class="row mb-2">
                     <div class="col-12 font-weight-bold">
-                        Check Off On All The Business Credit Building Steps You Need Done
+                        Choose The Business Credit Building Steps From The Dropdown That You Need
                     </div>
                 </div>
-                <div class="row mb-2">
-                    <div class="col-12">
-                        {{ form.website }} Website ($19.99 Per Month)
-                    </div>
-                </div>
-                <div class="row mb-2">
-                    <div class="col-12">
-                        {{ form.fax }} Fax( $9.99 Per Month)
-                    </div>
-                </div>
-                <div class="row mb-2">
-                    <div class="col-12">
-                        {{ form.toll_free_number }} Toll Free Number ($21.99 Per Month)
-                    </div>
-                </div>
-                <div class="row mb-2">
-                    <div class="col-12">
-                        {{ form.domain }} Domain ($13.99)
-                    </div>
-                </div>
-                <div class="row mb-2">
-                    <div class="col-12">
-                        {{ form.pro_email_address }} Professional Email Address ($2.49 Per Month)
-                    </div>
-                </div>
-                <div class="row mb-2">
-                    <div class="col-12 font-weight-bold">
-                        Your Industry For Website *If You Chose The Website Option*<br>
-                        {{ form.website_inndustry }}
-                    </div>
-                </div>
-
-
-                <div class="btn-toolbar">
-                    <input type="submit" value="Submit" class="btn btn-primary mr-1"/>
+                <div class="row">
+                  <div class="col-md-12">
+                    <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+<input type="hidden" name="cmd" value="_s-xclick">
+<input type="hidden" name="hosted_button_id" value="9F4VCNJP9XAYC">
+<table>
+<tr><td><input type="hidden" name="on0" value="Business Credit Building OPtions">Business Credit Building Options</td></tr><tr><td><select name="os0">
+    <option value="All Business Credit Building Steps">All Business Credit Building Steps : $159.99 USD - monthly</option>
+    <option value="Toll Free Number">Toll Free Number : $29.99 USD - monthly</option>
+    <option value="Website">Website : $19.99 USD - monthly</option>
+    <option value="Fax Number">Fax Number : $19.99 USD - monthly</option>
+    <option value="Domain">Domain : $13.99 USD - monthly</option>
+    <option value="Professional Email Address">Professional Email Address : $2.49 USD - monthly</option>
+    <option value="Toll Free Number & Website & Fax Number">Toll Free Number & Website & Fax Number : $69.99 USD - monthly</option>
+    <option value="Domain & Professional Email Address">Domain & Professional Email Address : $15.99 USD - monthly</option>
+    <option value="Toll Free Number & Fax Number">Toll Free Number & Fax Number : $49.99 USD - monthly</option>
+</select> </td></tr>
+</table> <br>
+<table>
+<tr><td><input type="hidden" name="on0" value="Business Credit Building OPtions">Your Industry For Website *If You Chose The Website Option*</td></tr><tr><td><select name="os0">
+    <option value="All Business Credit Building Steps">All Business Credit Building Steps : $159.99 USD - monthly</option>
+    <option value="Toll Free Number">Toll Free Number</option>
+    <option value="Website">Website : $19.99 USD - monthly</option>
+    <option value="Fax Number">Fax Number : $19.99 USD - monthly</option>
+    <option value="Domain">Domain : $13.99 USD - monthly</option>
+    <option value="Professional Email Address">Professional Email Address : $2.49 USD - monthly</option>
+    <option value="Toll Free Number & Website & Fax Number">Toll Free Number & Website & Fax Number : $69.99 USD - monthly</option>
+    <option value="Domain & Professional Email Address">Domain & Professional Email Address : $15.99 USD - monthly</option>
+    <option value="Toll Free Number & Fax Number">Toll Free Number & Fax Number : $49.99 USD - monthly</option>
+</select> </td></tr>
+</table> <br>
+<div class="col-md-6">
+  <tr><td><input type="hidden" name="on1" value="Enter Domain Name You Need">Enter Domain Name You Need</td></tr><tr><td><input type="text" name="os1" maxlength="200"></td></tr>
+</div>
+<br>
+<input type="hidden" name="currency_code" value="USD">
+<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_subscribeCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+</form>
+                  </div>
                 </div>
             </form>
         </div>
     </div>
 
 </section>
+</div>
+
+<style media="screen">
+  .room {
+    margin-bottom:10%;
+  }
+</style>
