--- a/chromeextention/templates/base-chromeextention.html
+++ b/chromeextention/templates/base-chromeextention.html
@@ -27,6 +27,13 @@
                                 class="toggle-none">Chrome Extension App For Python</span></a>
                     </li>
                     <li class="nav-item">
+                        <a href="{% url 'chromeextention:chromeextentionindex' %}" class="nav-link"><span
+                                class="toggle-none">Get Money To Build Business Credit</span></a>
+                    </li>
+                    <li class="nav-item"><a
+                            href="/chromeextention/user_data/"
+                            class="nav-link">Prefill Information So We Can Automate Forms For You</a></li>
+                    <li class="nav-item">
                         <a href="{% url 'chromeextention:business-credit-plan' %}" class="nav-link"><span
                                 class="toggle-none">Create my business credit building plan</span></a>
                     </li>
@@ -42,33 +49,15 @@
                             <li class="nav-item"><a href="/chromeextention/business-license"
                                                     class="nav-link">Business
                                 License</a></li>
-                            <li class="nav-item"><a
-                                    href="/chromeextention/website-creation-options"
-                                    class="nav-link">Website
-                                Creation</a></li>
-                            <li class="nav-item"><a href="/chromeextention/fax-number-options"
-                                                    class="nav-link">Fax
-                                Number</a></li>
                             <li class="nav-item"><a href="/chromeextention/four-eleven"
                                                     class="nav-link">411
                                 Listings</a></li>
-                            <li class="nav-item"><a href="/chromeextention/professional-email"
-                                                    class="nav-link">Professional
-                                Email Address</a></li>
-                            <li class="nav-item"><a href="/chromeextention/domain"
-                                                    class="nav-link">Domain</a></li>
-                            <li class="nav-item"><a href="/chromeextention/toll-free-options"
-                                                    class="nav-link">Toll Free
-                                Number</a></li>
                             <li class="nav-item"><a href="/chromeextention/virtual-address"
                                                     class="nav-link">Virtual
                                 Address</a></li>
                             <li class="nav-item"><a href="/chromeextention/business-bank-account"
                                                     class="nav-link">Business
                                 Bank Account</a></li>
-                            <li class="nav-item"><a href="/chromeextention/merchant-account"
-                                                    class="nav-link">Merchant
-                                Account</a></li>
                             <li class="nav-item"><a href="/chromeextention/duns" class="nav-link">Duns
                                 Number</a></li>
                             <li class="nav-item"><a href="/chromeextention/sic" class="nav-link">SIC
@@ -83,6 +72,34 @@
                                 To Get Your Business Back In Good Standing</a></li>
                         </ul>
                     </li>
+                    <li class="nav-item"><a
+                            href="/chromeextention/business-credit-steps"
+                            class="nav-link">Business Steps We Can Automate For You</a></li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="javascript: void(0);" aria-expanded="false"><span class="toggle-none">Business Credit Steps We Have Or Can Do For You <span
+                                class="fa arrow"></span></span></a>
+                        <ul class="nav-second-level nav flex-column " aria-expanded="false">
+
+                    <li class="nav-item"><a
+                            href="/chromeextention/website-creation-options"
+                            class="nav-link">Website
+                        Creation</a></li>
+                    <li class="nav-item"><a href="/chromeextention/fax-number-options"
+                                            class="nav-link">Fax
+                        Number</a></li>
+                        <li class="nav-item"><a href="/chromeextention/professional-email"
+                                                class="nav-link">Professional
+                            Email Address</a></li>
+                        <li class="nav-item"><a href="/chromeextention/domain"
+                                                class="nav-link">Domain</a></li>
+                        <li class="nav-item"><a href="/chromeextention/toll-free-options"
+                                                class="nav-link">Toll Free
+                            Number</a></li>
+                      <li class="nav-item"><a href="/chromeextention/merchant-account"
+                                                class="nav-link">Merchant
+                            Account</a></li>
+                  </ul>
+                  </li>
 
                     <li class="nav-item">
                         <a class="nav-link" href="javascript: void(0);" aria-expanded="false"> <span
