--- a/chromeextention/templates/chromeextention-index.html
+++ b/chromeextention/templates/chromeextention-index.html
@@ -7,8 +7,15 @@
 <!-- ============================================================== -->
 {% block content %}
     <div class="page-header">
-        <h2>Chrome Extension App For Python</h2>
+        <h2>Introduction Video On How To Use Chrome Extension</h2>
     </div>
     <section class="main-content">
+      <iframe width="100%" height="515" src="https://www.youtube.com/embed/u4GqnIkb4cY" frameborder="0"
+              allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen></iframe>
+              <br><br>
+              <div class="jumbotron">
+    <p class="lead" style="text-align:center; font-size:22px;"><b>Watch The Introduction Video To Learn How <br>To Most Effectively Use Our Chrome Extension</b></p>
+  </div>
     </section>
 {% endblock %}
