--- a/chromeextention/templates/base-chromeextention.html
+++ b/chromeextention/templates/base-chromeextention.html
@@ -27,7 +27,7 @@
                                 class="toggle-none">Chrome Extension App For Python</span></a>
                     </li>
                     <li class="nav-item">
-                        <a href="{% url 'chromeextention:chromeextentionindex' %}" class="nav-link"><span
+                        <a href="{% url 'chromeextention:moneyforbusinesscredit' %}" class="nav-link"><span
                                 class="toggle-none">Get Money To Build Business Credit</span></a>
                     </li>
                     <li class="nav-item"><a
