--- a/business/templates/moneyforbusinesscredit.html
+++ b/business/templates/moneyforbusinesscredit.html
@@ -9,7 +9,7 @@
 
 <div class="row page-header">
     <div class="col-lg-6 align-self-center ">
-        <h2>Upgrade To Business Builder Package</h2></div>
+        <h2>Get The Financing You Need To Build Business Credit</h2></div>
 </div>
 
 <section class="main-content">
@@ -20,9 +20,7 @@
   <div class="jumbonew">
     <div class="jumbotron jumbotron-fluid">
   <div class="container">
-    <h2>Our Different Financing Plans</h2>
-    <h3>We Have No Credit Check 0% Interest Offers For You</h3>
-    <h3><b>Watch The Video Above To Help You Choose The Best Plan For You</b></h3>
+    <h2><b>Watch The Video Above To See How To Get <br>Financing To Begin Building Business Credit</b></h2>
   </div>
   </div>
   </div>
