--- a/chromeextention/templates/base-chromeextention.html
+++ b/chromeextention/templates/base-chromeextention.html
@@ -132,6 +132,9 @@
                                 Card No Personal Gaurantee Vendor List</a></li>
                         </ul>
                     </li>
+                    <li class="nav-item">
+                        <a href="https://chrome.google.com/webstore/detail/get-dinero-today/nopllamladnpdgmgcfbnhdfpllpgpcgk" target="_blank" class="nav-link"><span class="toggle-none">Download Our Chrome Extension To Automate Business Credit Building</span></a>
+                    </li>
                 </ul>
             </div>
         </div>
