--- a/getdinerotoday/templates/components/JavaScriptBlock.html
+++ b/getdinerotoday/templates/components/JavaScriptBlock.html
@@ -19,6 +19,7 @@
 <script src='{% static "lib/datatables/dataTables.responsive.min.js" %}'></script>
 <script src='{% static "lib/toast/jquery.toast.min.js" %}'></script>
 <script src='{% static "dashboard.js" %}'></script>
+<script async>(function(s,u,m,o,j,v){j=u.createElement(m);v=u.getElementsByTagName(m)[0];j.async=1;j.src=o;j.dataset.sumoSiteId='1f753e9d802c35af42843049d55a5dcebd3a76448a96a8c04e91aed1a6897fc1';v.parentNode.insertBefore(j,v)})(window,document,'script','//load.sumo.com/');</script>
 
 <script>
     $(".nano").nanoScroller();
