--- a/getdinerotoday/templates/pages/base-business.html
+++ b/getdinerotoday/templates/pages/base-business.html
@@ -37,7 +37,7 @@
                         with No Money Down</a>
                 </li>
                 <li class="nav-item">
-                    <a href="https://www.youtube.com/watch?v=TS7hk62T7jE&feature=youtu.be" target="_blank"
+                    <a href="https://www.youtube.com/watch?v=5n2s3fpZC9U&t=2s" target="_blank"
                        class="nav-link"> Watch Webinar On Building Business Credit </a>
                 </li>
                 <li class="nav-item">
