--- a/getdinerotoday/templates/pages/base-business.html
+++ b/getdinerotoday/templates/pages/base-business.html
@@ -169,7 +169,7 @@
                     <a href="/{{ request.resolver_match.app_name }}/apply-loans" class="nav-link"> Apply For Business Loans </a>
                 </li>
                 <li class="nav-item">
-                    <a href="{% url 'covid19:homeone' %}" class="nav-link"> Covid-19 Business Loan Section</a>
+                    <a href="{% url 'covid19:homeone' %}" target="_blank" class="nav-link"> Covid-19 Business Loan Section</a>
                 </li>
                 <!-- <li class="nav-item">
                       <a href="/{{ request.resolver_match.app_name }}/credit-repair-options" class="nav-link"> Sign Up For Credit Repair </a>
@@ -197,15 +197,14 @@
                     <a href="https://getdinerotoday.tapfiliate.com/" target="_blank" class="nav-link"> Go To Affiliate Agent Portal </a>
                 </li>
                 <li class="nav-item">
-                    <a href="{% url 'products:dnbproducts' %}" class="nav-link"> Purchase Dunn & Bradstreet Products</a>
+                    <a href="{% url 'products:dnbproducts' %}" target="_blank" class="nav-link"> Purchase Dunn & Bradstreet Products</a>
                 </li>
                 <li class="nav-item">
-                    <a href="{% url 'onlinetools:onlinetoolshome' %}" class="nav-link"> See Online Tools That Help Grow Your Business</a>
+                    <a href="{% url 'onlinetools:onlinetoolshome' %}" target="_blank" class="nav-link"> See Online Tools That Help Grow Your Business</a>
                 </li>
                 <li class="nav-item">
-                    <a href="/{{ request.resolver_match.app_name }}/insurance-products" class="nav-link"> Insurance Products </a>
+                    <a href="/{{ request.resolver_match.app_name }}/insurance-products" class="nav-link"> Insurance Products </a> <br>
                 </li>
-
             </ul>
         </div>
     </div>
