--- a/business/templates/customerFinancing.html
+++ b/business/templates/customerFinancing.html
@@ -43,7 +43,7 @@
                         <p class="card-text">Click The Button Below To Offer Viabill To Your Customers</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                                <a target="_blank" class="btn btn-primary" href="https://viabill.com/">Offer Viabill To
+                                <a target="_blank" class="btn btn-primary" href="https://viabill.com/">Offer Viabill To <br>
                                     Your Customers</a>
                             </div>
                         </div>
@@ -59,7 +59,7 @@
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
                                 <a target="_blank" class="btn btn-primary" href="https://www.klarna.com/us/business/">Offer
-                                    Klarna To Your Customers</a>
+                                    Klarna To <br> Your Customers</a>
                             </div>
                         </div>
                     </div>
@@ -74,7 +74,7 @@
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
                                 <a target="_blank" class="btn btn-primary"
-                                   href="https://www.quadpay.com/for-businesses/">Offer Quadpay To Your Customers</a>
+                                   href="https://www.quadpay.com/for-businesses/">Offer Quadpay To <br> Your Customers</a>
                             </div>
 
                         </div>
@@ -92,7 +92,7 @@
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
                                 <a target="_blank" class="btn btn-primary" href="https://sezzle.com/merchants">Offer
-                                    Sezzle To Your Customers</a>
+                                    Sezzle To <br>Your Customers</a>
                             </div>
                         </div>
                     </div>
@@ -107,7 +107,7 @@
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
                                 <a target="_blank" class="btn btn-primary" href="https://fundboxpay.com/get-paid">Offer
-                                    Fundbox Pay To Your Customers</a>
+                                    Fundbox Pay <br>To Your Customers</a>
                             </div>
                         </div>
                     </div>
@@ -123,7 +123,7 @@
                             <div class="btn-group">
                                 <a target="_blank" class="btn btn-primary"
                                    href="https://www.paypal.com/us/webapps/mpp/promotional-financing">Offer Paypal Line
-                                    Of Credit To Your Customer</a>
+                                    Of <br>Credit To Your Customer</a>
                             </div>
 
                         </div>
@@ -141,7 +141,7 @@
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
                                 <a target="_blank" class="btn btn-primary"
-                                   href="https://app.behalf.com/users/signup/merchant">Offer Behalf Line Of Credit To
+                                   href="https://app.behalf.com/users/signup/merchant">Offer Behalf Line Of <br>Credit To
                                     Your Customers</a>
                             </div>
                         </div>
@@ -161,7 +161,7 @@
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
                                 <a target="_blank" class="btn btn-primary"
-                                   href="https://www.afterpay.com/for-retailers">Offer Afterpay To Your Customers</a>
+                                   href="https://www.afterpay.com/for-retailers">Offer Afterpay To <br>Your Customers</a>
                             </div>
                         </div>
                     </div>
@@ -176,7 +176,7 @@
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
                                 <a target="_blank" class="btn btn-primary" href="https://www.affirm.com/business">Offer
-                                    Affirm To Your Customers</a>
+                                    Affirm To <br> Your Customers</a>
                                 <br><br>
                             </div>
                         </div>
