--- a/business/templates/insuranceProduct.html
+++ b/business/templates/insuranceProduct.html
@@ -50,7 +50,7 @@
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
                                 <a target="_blank" class="btn btn-primary" href="https://www.hiscox.com/">Get Business
-                                    Insurance For Your Company</a>
+                                    Insurance <br> For Your Company</a>
                             </div>
                         </div>
                     </div>
