--- a/user/templates/login.html
+++ b/user/templates/login.html
@@ -41,7 +41,7 @@
             </div>
         </div>
         <br>
-        <p class=" text-center">Do Not Have An Account Register Below?</p>
+        <p class=" text-center">Do Not Have An Account?<br/>Register Below!</p>
         <a class="btn btn-block btn-success btn-rounded box-shadow" href="{% url 'user:signup' %}">Create A New
             Account</a>
         <br>
