--- a/user/templates/registration.html
+++ b/user/templates/registration.html
@@ -54,14 +54,9 @@
                 <span class="icon-user text-muted icon-input"></span>
             </div>
         </div>
-        <div class="clearfix">
-            <div class="float-left">
-                <div class="checkbox checkbox-primary margin-r-5">
-                    <input id="checkbox2" type="checkbox" checked="">
-                    <label for="checkbox2"> I Agree with Terms <a href="#">Terms</a> </label>
-                </div>
-            </div>
-        </div>
+
+        <div class="text-center"> By Clicking 'Register Now' You Agree with <a href="#">Terms and Conditions</a> </div>
+
         <input type="submit" name="commit" value="Register Now"
                class="newButton btn btn-block btn-primary btn-rounded box-shadow mt-10"
                data-disable-with="Register Now"/>
