--- a/user/templates/userBase.html
+++ b/user/templates/userBase.html
@@ -88,7 +88,7 @@
             border: 1px solid #dde6e9;
             transition-duration: .5s;
             display: block;
-            width: 83%;
+            width: 100%;
             height: 25px;
             padding: 6px 12px;
             font-size: 14px;
@@ -210,7 +210,12 @@
             width: 200px;
         }
 
+
+
     </style>
+   {% block extrastyle %}
+
+   {% endblock %}
 </head>
 <body class='bgcolor'>
 <div class="container">
