--- a/business/templates/moneyforbusinesscredit.html
+++ b/business/templates/moneyforbusinesscredit.html
@@ -1,4 +1,4 @@
-{% extends "base-chromeextention.html" %}
+{% extends "base-chromeextension.html" %}
 {% load static %}
 {% block extrastyle %}
 {% endblock extrastyle %}
