--- a/chromeextension/templates/base-chromeextension.html
+++ b/chromeextension/templates/base-chromeextension.html
@@ -23,57 +23,57 @@
                         </li>
                     {% endif %}
                     <li class="nav-item">
-                        <a href="{% url 'chromeextention:chromeextentionindex' %}" class="nav-link"><span
+                        <a href="{% url 'chromeextension:chromeextensionindex' %}" class="nav-link"><span
                                 class="toggle-none">Chrome Extension App For Python</span></a>
                     </li>
                     <li class="nav-item">
-                        <a href="{% url 'chromeextention:moneyforbusinesscredit' %}" class="nav-link"><span
+                        <a href="{% url 'chromeextension:moneyforbusinesscredit' %}" class="nav-link"><span
                                 class="toggle-none">Get Money To Build Business Credit</span></a>
                     </li>
                     <li class="nav-item"><a
-                            href="/chromeextention/user_data/"
+                            href="/chromeextension/user_data/"
                             class="nav-link">Prefill Information So We Can Automate Forms For You</a></li>
                     <li class="nav-item">
-                        <a href="{% url 'chromeextention:business-credit-plan' %}" class="nav-link"><span
+                        <a href="{% url 'chromeextension:business-credit-plan' %}" class="nav-link"><span
                                 class="toggle-none">Create my business credit building plan</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="javascript: void(0);" aria-expanded="false"><span class="toggle-none">Business Credit Building <span
                                 class="fa arrow"></span></span></a>
                         <ul class="nav-second-level nav flex-column " aria-expanded="false">
-                            <li class="nav-item"><a href="/chromeextention/business-entity"
+                            <li class="nav-item"><a href="/chromeextension/business-entity"
                                                     class="nav-link">Business
                                 Entity</a></li>
-                            <li class="nav-item"><a href="/chromeextention/ein" class="nav-link">EIN
+                            <li class="nav-item"><a href="/chromeextension/ein" class="nav-link">EIN
                                 Number</a></li>
-                            <li class="nav-item"><a href="/chromeextention/business-license"
+                            <li class="nav-item"><a href="/chromeextension/business-license"
                                                     class="nav-link">Business
                                 License</a></li>
-                            <li class="nav-item"><a href="/chromeextention/four-eleven"
+                            <li class="nav-item"><a href="/chromeextension/four-eleven"
                                                     class="nav-link">411
                                 Listings</a></li>
-                            <li class="nav-item"><a href="/chromeextention/virtual-address"
+                            <li class="nav-item"><a href="/chromeextension/virtual-address"
                                                     class="nav-link">Virtual
                                 Address</a></li>
-                            <li class="nav-item"><a href="/chromeextention/business-bank-account"
+                            <li class="nav-item"><a href="/chromeextension/business-bank-account"
                                                     class="nav-link">Business
                                 Bank Account</a></li>
-                            <li class="nav-item"><a href="/chromeextention/duns" class="nav-link">Duns
+                            <li class="nav-item"><a href="/chromeextension/duns" class="nav-link">Duns
                                 Number</a></li>
-                            <li class="nav-item"><a href="/chromeextention/sic" class="nav-link">SIC
+                            <li class="nav-item"><a href="/chromeextension/sic" class="nav-link">SIC
                                 & NAISC Codes</a>
                             </li>
-                            <li class="nav-item"><a href="/chromeextention/business-good-standing"
+                            <li class="nav-item"><a href="/chromeextension/business-good-standing"
                                                     class="nav-link">Checking
                                 If Your Business Is In Good Standing </a></li>
                             <li class="nav-item"><a
-                                    href="/chromeextention/business-in-good-standing"
+                                    href="/chromeextension/business-in-good-standing"
                                     class="nav-link">How
                                 To Get Your Business Back In Good Standing</a></li>
                         </ul>
                     </li>
                     <li class="nav-item"><a
-                            href="/chromeextention/business-credit-steps"
+                            href="/chromeextension/business-credit-steps"
                             class="nav-link">Business Steps We Can Automate For You</a></li>
                     <li class="nav-item">
                         <a class="nav-link" href="javascript: void(0);" aria-expanded="false"><span class="toggle-none">Business Credit Steps We Have Or Can Do For You <span
@@ -81,21 +81,21 @@
                         <ul class="nav-second-level nav flex-column " aria-expanded="false">
 
                     <li class="nav-item"><a
-                            href="/chromeextention/website-creation-options"
+                            href="/chromeextension/website-creation-options"
                             class="nav-link">Website
                         Creation</a></li>
-                    <li class="nav-item"><a href="/chromeextention/fax-number-options"
+                    <li class="nav-item"><a href="/chromeextension/fax-number-options"
                                             class="nav-link">Fax
                         Number</a></li>
-                        <li class="nav-item"><a href="/chromeextention/professional-email"
+                        <li class="nav-item"><a href="/chromeextension/professional-email"
                                                 class="nav-link">Professional
                             Email Address</a></li>
-                        <li class="nav-item"><a href="/chromeextention/domain"
+                        <li class="nav-item"><a href="/chromeextension/domain"
                                                 class="nav-link">Domain</a></li>
-                        <li class="nav-item"><a href="/chromeextention/toll-free-options"
+                        <li class="nav-item"><a href="/chromeextension/toll-free-options"
                                                 class="nav-link">Toll Free
                             Number</a></li>
-                      <li class="nav-item"><a href="/chromeextention/merchant-account"
+                      <li class="nav-item"><a href="/chromeextension/merchant-account"
                                                 class="nav-link">Merchant
                             Account</a></li>
                   </ul>
@@ -106,11 +106,11 @@
                                 class="toggle-none"> Business Credit Bureaus To Become Established With  <span
                                 class="fa arrow"></span></span></a>
                         <ul class="nav-second-level nav flex-column sub-menu" aria-expanded="false">
-                            <li class="nav-item"><a href="/chromeextention/experian" class="nav-link"> Experian
+                            <li class="nav-item"><a href="/chromeextension/experian" class="nav-link"> Experian
                                 Business </a></li>
-                            <li class="nav-item"><a href="/chromeextention/dunn-brad" class="nav-link"> Dunn &
+                            <li class="nav-item"><a href="/chromeextension/dunn-brad" class="nav-link"> Dunn &
                                 Bradsheet </a></li>
-                            <li class="nav-item"><a href="/chromeextention/equifax" class="nav-link"> Equifax
+                            <li class="nav-item"><a href="/chromeextension/equifax" class="nav-link"> Equifax
                                 Business </a></li>
                         </ul>
                     </li>
@@ -122,13 +122,13 @@
                                 class="toggle-none">Corporate Credit List<span
                                 class="fa arrow"></span></span></a>
                         <ul class="nav-second-level nav flex-column sub-menu" aria-expanded="false">
-                            <li class="nav-item"><a href="/chromeextention/vendor-list" class="nav-link">Starter Vendor
+                            <li class="nav-item"><a href="/chromeextension/vendor-list" class="nav-link">Starter Vendor
                                 List</a></li>
-                            <li class="nav-item"><a href="/chromeextention/store-credit-vendor-list" class="nav-link">Store
+                            <li class="nav-item"><a href="/chromeextension/store-credit-vendor-list" class="nav-link">Store
                                 Credit Vendor List</a></li>
-                            <li class="nav-item"><a href="/chromeextention/business-credit-vendor" class="nav-link">Revolving
+                            <li class="nav-item"><a href="/chromeextension/business-credit-vendor" class="nav-link">Revolving
                                 Business Credit Vendor List</a></li>
-                            <li class="nav-item"><a href="/chromeextention/cc-credit-vendor" class="nav-link">Credit
+                            <li class="nav-item"><a href="/chromeextension/cc-credit-vendor" class="nav-link">Credit
                                 Card No Personal Gaurantee Vendor List</a></li>
                         </ul>
                     </li>
