--- a/user/templates/my_progress.html
+++ b/user/templates/my_progress.html
@@ -96,7 +96,7 @@
                     <div class="card">
                         <div class="card-body">
                             <p>Google Chrome Extension Portal</p>
-                            <a class="btn btn-primary" href="{% url 'chromeextention:chromeextentionindex' %}" target="_blank">Click
+                            <a class="btn btn-primary" href="{% url 'chromeextension:chromeextensionindex' %}" target="_blank">Click
                                 Here To Go To The <br>Google Chrome Extension Portal</a>
                         </div>
                     </div>
