--- a/chromeextension/templates/chromeextension-index.html
+++ b/chromeextension/templates/chromeextension-index.html
@@ -1,4 +1,4 @@
-{% extends "base-chromeextention.html" %}
+{% extends "base-chromeextension.html" %}
 {% load static %}
 {% block extrastyle %}
 {% endblock extrastyle %}
