--- a/getdinerotoday/templates/components/TopBar.html
+++ b/getdinerotoday/templates/components/TopBar.html
@@ -66,7 +66,7 @@
                                     <li class="dropdown-divider"></li>
                                 {% endif %}
                                 <li>
-                                    <a href="{% url 'chromeextention:chromeextentionindex' %}"><i class="icon-list"></i> Extension</a>
+                                    <a href="{% url 'chromeextension:chromeextensionindex' %}"><i class="icon-list"></i> Extension</a>
                                 </li>
                                 <li class="dropdown-divider"></li>
                                 <li>
