--- a/getdinerotoday/templates/landingpages/partner.html
+++ b/getdinerotoday/templates/landingpages/partner.html
@@ -1,175 +1,7 @@
-<html lang="en">
-<head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="keywords" content="HTML5 Template" />
-<meta name="description" content="HTML5 Template" />
-<meta name="author" content="www.themeht.com" />
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-<title>Get Dinero Today </title>
+{% extends "landingpages/layout/LandingLayout.html" %}
+{% load static %}
 
-<!-- favicon icon -->
-<link rel="shortcut icon" href="/static/images/favicon.ico" />
-
-<!-- inject css start -->
-
-<!--== bootstrap -->
-<link href="/static/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-
-<link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,500,600,700,800,900" rel="stylesheet">
-
-<!--== animate -->
-<link href="/static/css/animate.css" rel="stylesheet" type="text/css" />
-
-<!--== fontawesome -->
-<link href="/static/css/fontawesome-all.css" rel="stylesheet" type="text/css" />
-
-<!--== line-awesome -->
-<link href="/static/css/line-awesome.min.css" rel="stylesheet" type="text/css" />
-
-<!--== magnific-popup -->
-<link href="/static/css/magnific-popup/magnific-popup.css" rel="stylesheet" type="text/css" />
-
-<!--== owl-carousel -->
-<link href="/static/css/owl-carousel/owl.carousel.css" rel="stylesheet" type="text/css" />
-
-<!--== base -->
-<link href="/static/css/base.css" rel="stylesheet" type="text/css" />
-
-<!--== shortcodes -->
-<link href="/static/css/shortcodes.css" rel="stylesheet" type="text/css" />
-
-<!--== default-theme -->
-<link href="/static/css/style.css" rel="stylesheet" type="text/css" />
-
-<!--== responsive -->
-<link href="/static/css/responsive.css" rel="stylesheet" type="text/css" />
-
-<!-- inject css end -->
-<!--Start of Tawk.to Script-->
-<script type="text/javascript">
-var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-(function(){
-var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-s1.async=true;
-s1.src='https://embed.tawk.to/5e0518eb7e39ea1242a1ea79/default';
-s1.charset='UTF-8';
-s1.setAttribute('crossorigin','*');
-s0.parentNode.insertBefore(s1,s0);
-})();
-</script>
-<!--End of Tawk.to Script-->
-</head>
-
-<body class="home-4">
-
-<!-- page wrapper start -->
-
-<div class="page-wrapper">
-
-<!-- preloader start -->
-
-<div id="ht-preloader">
-  <div class="loader clear-loader">
-    <div class="loader-box"></div>
-    <div class="loader-box"></div>
-    <div class="loader-box"></div>
-    <div class="loader-box"></div>
-    <div class="loader-wrap-text">
-      <div class="text"><span>M</span>B<span>B</span>
-      </div>
-    </div>
-  </div>
-</div>
-
-<!-- preloader end -->
-<style media="screen">
-.navbar-toggler {
-  background-color: rgb(0, 91, 234);
-  color: rgb(0, 91, 234);
-}
-</style>
-
-<!--header start-->
-
-<header id="site-header" class="header header-3">
-  <div class="container">
-    <div id="header-wrap">
-      <div class="row">
-        <div class="col-lg-12">
-          <!-- Navbar -->
-          <nav class="navbar navbar-expand-lg">
-            <a class="navbar-brand logo" href="/">
-              <img id="logo-white-img" class="img-center" src="/static/images/logo-white.png" height="180px" alt="">
-              <img id="logo-img" class="img-center sticky-logo" src="/static/images/logo.png" height="180px" alt="">
-            </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation"> <span></span>
-              <span></span>
-              <span></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavDropdown">
-              <ul id="main-menu" class="nav navbar-nav ml-auto mr-auto">
-                <li class="nav-item"> <a class="nav-link" href="/">Home</a>
-                </li>
-                <li class="nav-item"> <a class="nav-link" href="/about-us">About Us</a><br>
-                  <ul>
-                    <li class="nav-item"><a class="nav-link" href="/faq">Faq</a>
-                    </li><br>
-                    <li><a class="nav-link" href="/about-us">Our Story</a>
-                    </li><br>
-                    <li><a class="nav-link" href="/testimonial">Testimonials</a>
-                    </li>
-                    </li>
-                  </ul>
-                </li>
-
-
-                <li class="nav-item"><a class="nav-link" href="/pricing">Pricing</a>
-                </li>
-                <li class="nav-item"> <a class="nav-link" class="nav-link" href="/services">Services</a>
-                </li>
-
-                <li class="nav-item"> <a class="nav-link" class="nav-link" href="/financing">Financing</a>
-                  <ul> <br>
-                    <li><a class="nav-link" href="/financing">Financing Offers</a>
-                    </li>
-                  </ul>
-                </li>
-
-                <li class="nav-item"> <a class="nav-link" href="/partner">Partners</a>
-                  <ul> <br>
-                    <li><a class="nav-link active" href="/whitelabel">White Label Program</a>
-                    </li><br>
-                    <li><a class="nav-link" href="/affiliate_program">Affiliate Program</a>
-                    </li>
-                  </ul>
-                </li>
-                <li class="nav-item"> <a class="nav-link" href="/contact">Contact Us</a>
-                </li>
-                <div class="client-loginshow">
-                  <li class="nav-item"> <a class="nav-link" href="/dashboard" target="_blank">Client Login</a>
-                  </li>
-                </div>
-
-                <style media="screen">
-                @media screen and (min-width: 576px) {
-.client-loginshow li {
-  display: none;
-} }
-                </style>
-              </ul>
-            </div>
-            <a class="btn btn-white btn-sm" href="https://millennialbusinessbuilders.herokuapp.com/" target="_blank" data-text="Client Login"> <span>Client<span></span> <span></span><span></span>  <span></span><span></span> <span></span> <span>Login</span><span></span><span></span><span></span><span></span>
-            </a>
-          </nav>
-        </div>
-      </div>
-    </div>
-  </div>
-  </header>
-<!--header end-->
-
-
+{% block content %}
 <!--page title start-->
 
 <section class="page-title o-hidden pos-r md-text-center" data-bg-color="#fbf3ed">
@@ -238,123 +70,10 @@ s0.parentNode.insertBefore(s1,s0);
 
 <!--body content end-->
 
-<!--footer start-->
-<footer class="footer pt-8 " data-bg-img="/static/images/pattern/03.png">
-  <div class="primary-footer">
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-lg-12 col-md-12 md-mt-5">
-          <h4>Contact Us</h4>
-          <ul class="media-icon list-unstyled">
-            <li>
-              <p class="mb-0">Address: <b>1629 K St NW Suite 300, Washington, DC 20006</b>
-              </p>
-            </li>
-            <li>Email: <a href="mailto:info@getdinerotoday.com"><b>info@getdinerotoday.com</b></a>
-            </li>
-            <li>Phone: <a href="tel:8777262604"><b>877-726-2604</b></a>
-            </li>
-          </ul>
-          <div class="social-icons social-border social-hover mt-3">
-              <ul class="list-inline">
-                <li class="social-facebook"><a href="https://www.facebook.com/Millennial-Business-Builders-198386941114067/?modal=admin_todo_tour"><i class="fab fa-facebook-f"></i></a>
-                </li>
-              </ul>
-            </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  </div>
-  <div class="secondary-footer">
-    <div class="container-fluid">
-      <div class="copyright">
-        <div class="row align-items-center">
-          <div class="col-lg-6 col-md-12"> <span>Copyright 2019 Get Dinero Today  | All Rights Reserved</span>
-          </div>
-          <div class="col-lg-6 col-md-12 footer-list text-lg-right md-mt-3">
-          <ul class="list-inline">
-            <li><a href="/faq">Faq</a>
-            </li>
-          </ul>
-        </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</footer>
-
-<!--footer end-->
-
-
-</div>
-
-<!-- page wrapper end -->
 
 
 <!--back-to-top start-->
 
 <div class="scroll-top"><a class="smoothscroll" href="#top"><i class="flaticon-go-up-in-web"></i></a></div>
 
-<!--back-to-top end-->
-
-
-<!-- inject js start -->
-
-<!--== jquery -->
-<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="/static/js/jquery.min.js"></script>
-
-<!--== popper -->
-<script src="/static/js/popper.min.js"></script>
-
-<!--== bootstrap -->
-<script src="/static/js/bootstrap.min.js"></script>
-
-<!--== appear -->
-<script src="/static/js/jquery.appear.js"></script>
-
-<!--== modernizr -->
-<script src="/static/js/modernizr.js"></script>
-
-<!--== easing -->
-<script src="/static/js/jquery.easing.min.js"></script>
-
-<!--== menu -->
-<script src="/static/js/menu/jquery.smartmenus.js"></script>
-
-<!--== owl-carousel -->
-<script src="/static/js/owl-carousel/owl.carousel.min.js"></script>
-
-<!--== magnific-popup -->
-<script src="/static/js/magnific-popup/jquery.magnific-popup.min.js"></script>
-
-<!--== counter -->
-<script src="/static/js/counter/counter.js"></script>
-
-<!--== countdown -->
-<script src="/static/js/countdown/jquery.countdown.min.js"></script>
-
-<!--== canvas -->
-<script src="/static/js/canvas.js"></script>
-
-<!--== confetti -->
-<script src="/static/js/confetti.js"></script>
-
-<!--== step animation -->
-<script src="/static/js/snap.svg.js"></script>
-<script src="/static/js/step.js"></script>
-
-<!--== contact-form -->
-<script src="/static/js/contact-form/contact-form.js"></script>
-
-<!--== wow -->
-<script src="/static/js/wow.min.js"></script>
-
-<!--== theme-script -->
-<script src="/static/js/theme-script.js"></script>
-
-<!-- inject js end -->
-
-</body>
-
-</html>
+ {% endblock %}
