--- a/getdinerotoday/templates/landingpages/webinar.html
+++ b/getdinerotoday/templates/landingpages/webinar.html
@@ -1,118 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="keywords" content="HTML5 Template" />
-<meta name="description" content="HTML5 Template" />
-<meta name="author" content="www.themeht.com" />
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-<title>Get Dinero Today </title>
+{% extends "landingpages/layout/LandingLayout.html" %}
+{% load static %}
 
-<!-- favicon icon -->
-<link rel="shortcut icon" href="/static/images/favicon.ico" />
-
-<!-- inject css start -->
-
-<!--== bootstrap -->
-<link href="/static/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-
-<link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,500,600,700,800,900" rel="stylesheet">
-
-<!--== animate -->
-<link href="/static/css/animate.css" rel="stylesheet" type="text/css" />
-
-<!--== fontawesome -->
-<link href="/static/css/fontawesome-all.css" rel="stylesheet" type="text/css" />
-
-<!--== line-awesome -->
-<link href="/static/css/line-awesome.min.css" rel="stylesheet" type="text/css" />
-
-<!--== magnific-popup -->
-<link href="/static/css/magnific-popup/magnific-popup.css" rel="stylesheet" type="text/css" />
-
-<!--== owl-carousel -->
-<link href="/static/css/owl-carousel/owl.carousel.css" rel="stylesheet" type="text/css" />
-
-<!--== base -->
-<link href="/static/css/base.css" rel="stylesheet" type="text/css" />
-
-<!--== shortcodes -->
-<link href="/static/css/shortcodes.css" rel="stylesheet" type="text/css" />
-
-<!--== default-theme -->
-<link href="/static/css/style.css" rel="stylesheet" type="text/css" />
-
-<!--== responsive -->
-<link href="/static/css/responsive.css" rel="stylesheet" type="text/css" />
-
-<!-- inject css end -->
-<!--Start of Tawk.to Script-->
-<script>
-    (function(h,o,t,j,a,r){
-        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-        h._hjSettings={hjid:1784619,hjsv:6};
-        a=o.getElementsByTagName('head')[0];
-        r=o.createElement('script');r.async=1;
-        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-        a.appendChild(r);
-    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-</script>
-<script>
-  window.intercomSettings = {
-    app_id: "s1nwi3kp"
-  };
-</script>
-
-<script>
-// We pre-filled your app ID in the widget URL: 'https://widget.intercom.io/widget/s1nwi3kp'
-(function(){var w=window;var ic=w.Intercom;if(typeof ic==="function"){ic('reattach_activator');ic('update',w.intercomSettings);}else{var d=document;var i=function(){i.c(arguments);};i.q=[];i.c=function(args){i.q.push(args);};w.Intercom=i;var l=function(){var s=d.createElement('script');s.type='text/javascript';s.async=true;s.src='https://widget.intercom.io/widget/s1nwi3kp';var x=d.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);};if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})();
-</script>
-</head>
-
-<body class="home-4">
-
-<!-- page wrapper start -->
-
-<div class="page-wrapper">
-
-<!-- preloader start -->
-
-<div id="ht-preloader">
-  <div class="loader clear-loader">
-    <div class="loader-box"></div>
-    <div class="loader-box"></div>
-    <div class="loader-box"></div>
-    <div class="loader-box"></div>
-    <div class="loader-wrap-text">
-      <div class="text"><span>M</span>B<span>B</span>
-      </div>
-    </div>
-  </div>
-</div>
-
-<!-- preloader end -->
-<style media="screen">
-.navbar-toggler {
-  background-color: rgb(0, 91, 234);
-  color: rgb(0, 91, 234);
-}
-</style>
-<!--header start-->
-
-<header id="site-header" class="header header-3">
-  <div class="container">
-    <div id="header-wrap">
-      <div class="row">
-      </div>
-    </div>
-  </div>
-</header>
-
-<!--header end-->
-
-
-<!--page title start-->
+{% block content %}
 
 <section class="page-title o-hidden pos-r md-text-center" data-bg-color="#fbf3ed">
   <canvas id="confetti"></canvas>
@@ -219,60 +108,4 @@
 
 <!-- inject js start -->
 
-<!--== jquery -->
-<script src="/static/js/jquery.min.js"></script>
-
-<!--== popper -->
-<script src="/static/js/popper.min.js"></script>
-
-<!--== bootstrap -->
-<script src="/static/js/bootstrap.min.js"></script>
-
-<!--== appear -->
-<script src="/static/js/jquery.appear.js"></script>
-
-<!--== modernizr -->
-<script src="/static/js/modernizr.js"></script>
-
-<!--== easing -->
-<script src="/static/js/jquery.easing.min.js"></script>
-
-<!--== menu -->
-<script src="/static/js/menu/jquery.smartmenus.js"></script>
-
-<!--== owl-carousel -->
-<script src="/static/js/owl-carousel/owl.carousel.min.js"></script>
-
-<!--== magnific-popup -->
-<script src="/static/js/magnific-popup/jquery.magnific-popup.min.js"></script>
-
-<!--== counter -->
-<script src="/static/js/counter/counter.js"></script>
-
-<!--== countdown -->
-<script src="/static/js/countdown/jquery.countdown.min.js"></script>
-
-<!--== canvas -->
-<script src="/static/js/canvas.js"></script>
-
-<!--== confetti -->
-<script src="/static/js/confetti.js"></script>
-
-<!--== step animation -->
-<script src="/static/js/snap.svg.js"></script>
-<script src="/static/js/step.js"></script>
-
-<!--== contact-form -->
-<script src="/static/js/contact-form/contact-form.js"></script>
-
-<!--== wow -->
-<script src="/static/js/wow.min.js"></script>
-
-<!--== theme-script -->
-<script src="/static/js/theme-script.js"></script>
-
-<!-- inject js end -->
-
-</body>
-
-</html>
+{% endblock %}
